--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<DOCTYPE html>
+<html>
+<body>
 <div class="body">
   <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -67,3 +70,5 @@
     </div> <!-- /container -->
   
 </div>
+</body>
+</html>
