--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en" >
+
 <head>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Bootstrap Non-Responsive Template</title>
+  
+  
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
+
 <body>
-<div class="body">
+
+  <div class="body">
   <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -73,5 +84,9 @@
     </div> <!-- /container -->
   
 </div>
+  
+  
+
 </body>
+
 </html>
