--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Bootstrap Non-Responsive Template - Daniel Cagua Ennis</title>
+  <title>Daniel Cagua Ennis - Personal Website</title>
   <link rel="stylesheet" href="css/style.css">
 
 <!-- Latest compiled and minified CSS -->
@@ -34,9 +34,13 @@
           <div id="navbar">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a hred="#experience">Experience</a></li>
+            <li><a href="#about">Projects</a></li>
+            <li><a href="#hobbies">Hobbies</a></li>
             <li><a href="#contact">Contact</a></li>
             
+            <!--
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -69,8 +73,10 @@
     <div class="container">
 
       <div class="page-header">
-        <h1>Non-responsive Bootstrap</h1>
-        <p class="lead">Disable the responsiveness of Bootstrap by fixing the width of the container and using the first grid system tier. <a href="https://getbootstrap.com/getting-started/#disable-responsive">Read the documentation</a> for more information.</p>
+        <h1>Hi, Im Daniel Cagua Ennis</h1>
+        <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
+            <br><br> Interested in software development and data handling for security purposes.
+        </p>
       </div>
 
       <h3>What changes</h3>
