--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a hred="#experience">Experience</a></li>
+            <li><a hred="#skills">Skills</a></li>
             <li><a href="#about">Projects</a></li>
             <li><a href="#hobbies">Hobbies</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -73,14 +73,33 @@
     <div class="container">
 
       <div class="page-header">
+        
+        <img src="img/Profile.jpg" alt="Daniel Cagua Ennis">
         <h1>Hi, Im Daniel Cagua Ennis</h1>
+       
         <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
-            <br><br> Interested in software development and data handling for security purposes.
+            <br><br> 
+            I am twenty one years old and live with my family (Dad and Mom), I also have a brother who lived in Argentina. I am interested in software development and data handling for security purposes.
         </p>
       </div>
 
-      <h3>What changes</h3>
-      <p>Note the lack of the <code>&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;</code>, which disables the zooming aspect of sites in mobile devices. In addition, we reset our container's width and changed the navbar to prevent collapsing, and are basically good to go.</p>
+      <h3>Education</h3>
+      <div class="row">
+        <div class="col-xs-4">
+        <h4>Colegio Anglo Americano</h4>
+        <img src="img/CAA.png" alt="Colegio Anglo Americano">
+        <br><br><p> Aqui una descripcion breve</p>
+        <a href="http://www.angloamericanobogota.edu.co/">Website</a>
+        </div>
+
+        <div class="col-xs-4">
+        <h4>Universidad de los Andes</h4>
+        <img src="img/andes.png" alt="Universidad de los Andes">
+         <br><br><p> Aqui una descripcion breve</p>
+         <a href="https://uniandes.edu.co/">Website</a>
+        </div>
+      </div>
+      <!--<p>Note the lack of the <code>&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;</code>, which disables the zooming aspect of sites in mobile devices. In addition, we reset our container's width and changed the navbar to prevent collapsing, and are basically good to go.</p>-->
 
       <h3>Regarding navbars</h3>
       <p>As a heads up, the navbar component is rather tricky here in that the styles for displaying it are rather specific and detailed. Overrides to ensure desktop styles display are not as performant or sleek as one would like. Just be aware there may be potential gotchas as you build on top of this example when using the navbar.</p>
