--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="page-header">
         
-        <img src="img/Profile.jpg" alt="Daniel Cagua Ennis">
+        <img src="img/ube.png" alt="Daniel Cagua Ennis">
         <h1>Hi, Im Daniel Cagua Ennis</h1>
        
         <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
