--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>      
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">      
   
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
 </head>
 
@@ -87,36 +82,64 @@
       <div class="row">
         <div class="col-xs-4">
         <h4>Colegio Anglo Americano</h4>
-        <img src="img/CAA.png" alt="Colegio Anglo Americano">
+        <img src="img/CAA.png" alt="Colegio Anglo Americano" height="256" width="256">
         <br><br><p> Aqui una descripcion breve</p>
         <a href="http://www.angloamericanobogota.edu.co/">Website</a>
         </div>
 
         <div class="col-xs-4">
         <h4>Universidad de los Andes</h4>
-        <img src="img/andes.png" alt="Universidad de los Andes">
+        <img src="img/andes.png" alt="Universidad de los Andes" height="256" width="256">
          <br><br><p> Aqui una descripcion breve</p>
          <a href="https://uniandes.edu.co/">Website</a>
         </div>
       </div>
       <!--<p>Note the lack of the <code>&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;</code>, which disables the zooming aspect of sites in mobile devices. In addition, we reset our container's width and changed the navbar to prevent collapsing, and are basically good to go.</p>-->
 
-      <h3>Regarding navbars</h3>
+      <h3>Skills</h3>
       <p>As a heads up, the navbar component is rather tricky here in that the styles for displaying it are rather specific and detailed. Overrides to ensure desktop styles display are not as performant or sleek as one would like. Just be aware there may be potential gotchas as you build on top of this example when using the navbar.</p>
 
-      <h3>Browsers, scrolling, and fixed elements</h3>
+      <h3>Projects</h3>
       <p>Non-responsive layouts highlight a key drawback to fixed elements. <strong class="text-danger">Any fixed component, such as a fixed navbar, will not be scrollable when the viewport becomes narrower than the page content.</strong> In other words, given the non-responsive container width of 970px and a viewport of 800px, you'll potentially hide 170px of content.</p>
       <p>There is no way around this as it's default browser behavior. The only solution is a responsive layout or using a non-fixed element.</p>
 
-      <h3>Non-responsive grid system</h3>
+      <h3>Hobbies</h3>
       <div class="row">
-        <div class="col-xs-4">One third</div>
-        <div class="col-xs-4">One third</div>
-        <div class="col-xs-4">One third</div>
+        <div class="col-xs-4">Videogames
+          <br>
+        <img src="img/game.png" alt="Videogames" height="125" width="125"> </div>
+
+        <div class="col-xs-4">Drawing
+        <br>
+        <img src="img/draw.png" alt="Drawing" height="125" width="125"></div>
+        <div class="col-xs-4">Soccer
+        <br>
+        <img src="img/soccer.png" alt="Soccer" height="125" width="125"></div>
       </div>
+
+      <h3>Contact details</h3>
+      <div id="contactInfo" class="row">
+            <div class="contact-details">
+              <p class="address">
+                <span>Daniel Cagua Ennis</span><br />
+                <span>Calle 144 #11-70<br />
+                Bogota, Colombia</span><br />
+                <span>(+57)3134061172</span><br />
+                <span>d.cagua10@uniandes.edu.co</span>
+              </p>
+            </div>
+
 
     </div> <!-- /container -->
   
 </div>
+
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- Jquery and Bootstrap -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 </html>
