--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <br>
                     <p>I love playing Videogames in my free time. Probably the two games that I like the most are: Borderlands 2 and League of Legends.
                         <br>
-                        <br>Don't press the X button, there is more to see</p>
+                        <br>Don't press the X button, there is more to see...</p>
                 </div>
                 <div class="col-xs-4">
                     <h4>Drawing</h4>
