--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#education">Education</a></li>
-                        <li><a hred="#skills">Skills</a></li>
+                        <li><a href="#skills">Skills</a></li>
                         <li><a href="#about">Projects</a></li>
                         <li><a href="#hobbies">Hobbies</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -34,13 +34,14 @@
         </nav>
         <div class="container">
             <div class="page-header">
-                <img src="img/ube.png" alt="Daniel Cagua Ennis">
+                <img src="img/Profile.png" class="photo" alt="Daniel Cagua Ennis">
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
                     <br>
                     <br> I am twenty one years old and live with my family (Dad and Mom), I also have a brother who lived in Argentina. I am interested in software development and data handling for security purposes.
                 </p>
             </div>
+
             <h3>Education</h3>
             <div class="row">
                 <div class="col-xs-4">
