--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </nav>
         <div class="container">
             <div class="page-header">
-                <img src="img/Profile.png" class="photo" alt="Daniel Cagua Ennis">
+                <!--<br><img src="img/ube.png"><br>-->
+                <img src="img/Profile.jpg" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
                     <br>
