--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="page-header">
                 <!--<br><img src="img/ube.png"><br>-->
-                <img src="img/Profile.jpg" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
+                <img src="img/Profile.jpg" id="profile" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
                     <br>
@@ -237,9 +237,11 @@
             <hr>
             <!-- /container -->
         </div>
+        <!-- JS -->
+        <script src="js/script.js"></script>
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!-- Jquery and Bootstrap -->
+        <!-- Jquery,Bootstrap, JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
