--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Daniel Cagua Ennis - Personal Website</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slides.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -12,12 +13,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!--Star rating-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--Favicon-->
+    <link rel="icon" href="img/favicon.ico">
 </head>
 
 <body>
     <div class="body">
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <!--<nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Daniel Cagua Ennis</a>
@@ -31,18 +34,18 @@
                         <li><a href="#hobbies">Hobbies</a></li>
                         <li><a href="#contact">Contact</a></li>
                 </div>
-        </nav>
+        </nav>-->
         <div class="container">
             <div class="page-header">
                 <!--<br><img src="img/ube.png"><br>-->
                 <img src="img/Profile.jpg" id="profile" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
+                <br>
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
                     <br>
                     <br> I am twenty one years old and live with my family (Dad and Mom), I also have a brother who lived in Argentina. I am interested in software development and data handling for security purposes.
                 </p>
             </div>
-
             <h3>Education</h3>
             <div class="row">
                 <div class="col-xs-4">
@@ -127,41 +130,112 @@
                 </div>
             </div>
             <br>
-
             <h4>Programing Languages</h4>
             <div class="row">
                 <div class="col-xs-4">
-                <img src="img/code.png" alt="Code" height="200" width="200">
-                  <br><br>
+                    <img src="img/code.png" alt="Code" height="200" width="200">
+                    <br>
+                    <br>
                     <p> I have got some experience programming in different types of languages and I am aiming to learn more in the art of coding.</p>
                 </div>
-
                 <div class="col-xs-4">
-                  <h4>Skills Rating</h4>
-                  <br>
-                  <p>According to Low, Medium and High rating my skills correspond to:</p>
-                  
-                  <ul>
-                    <li>Java: High</li>
-                    <li>JavaScript: Low</li>
-                    <li>HTML: Medium</li>
-                    <li>CSS: Medium</li>
-                    <li>SQL: Medium</li>
-                    <li>Phyton: Low</li>
-                    <li>Matlab: Low</li>
-                  </ul>
+                    <h4>Skills Rating</h4>
+                    <br>
+                    <p>According to Low, Medium and High rating my skills correspond to:</p>
+                    <ul>
+                        <li>Java: High</li>
+                        <li>JavaScript: Low</li>
+                        <li>HTML: Medium</li>
+                        <li>CSS: Medium</li>
+                        <li>SQL: Medium</li>
+                        <li>Phyton: Low</li>
+                        <li>Matlab: Low</li>
+                    </ul>
                 </div>
                 <div class="col-xs-4">
                 </div>
             </div>
-
             <hr>
             <h3>Projects</h3>
+            <div class="row">
+                <div class="col-xs-4">
+                    <h4>Patches App</h4>
+                    <br>
+                    <img src="img/game.png" alt="Patches" height="150" width="150">
+                    <br>
+                    <br>
+                    <p>STS</p>
+                </div>
+                <div class="col-xs-4">
+                    <h4>Project 2</h4>
+                    <br>
+                    <img src="img/draw.png" alt="Draw" height="150" width="150">
+                    <br>
+                    <br>
+                    <p>STS</p>
+                </div>
+                <div class="col-xs-4">
+                    <h4>Project 3</h4>
+                    <br>
+                    <img src="img/soccer.png" alt="Soccer" height="150" width="150">
+                    <br>
+                    <br>
+                    <p>STS</p>
+                </div>
+            </div>
             <div class="row">
             </div>
             <hr>
             <h3>Hobbies</h3>
-            <div class="row">
+                <!--Slider-->
+                <div class="slideshow-container">
+                    <!-- Full-width images with number and caption text -->
+                    <div class="mySlides fade">
+                        <div class="numbertext">1 / 7</div>
+                        <img src="img/gallery/gallery1.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">2 / 7</div>
+                        <img src="img/gallery/gallery2.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">3 / 7</div>
+                        <img src="img/gallery/gallery3.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">4/ 7</div>
+                        <img src="img/gallery/gallery4.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">5 / 7</div>
+                        <img src="img/gallery/gallery5.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">6 / 7</div>
+                        <img src="img/gallery/gallery6.png" style="width:100%">
+                    </div>
+                    <div class="mySlides fade">
+                        <div class="numbertext">7 / 7</div>
+                        <img src="img/gallery/gallery7.png" style="width:100%">
+                    </div>
+                    <!-- Next and previous buttons -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <br>
+                <!-- The dots/circles -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot" onclick="currentSlide(5)"></span>
+                    <span class="dot" onclick="currentSlide(6)"></span>
+                    <span class="dot" onclick="currentSlide(7)"></span>
+                </div><br>
+                <!--SlinderEnd-->
+
+                <div class="row">
                 <div class="col-xs-4">
                     <h4>Videogames</h4>
                     <br>
@@ -172,6 +246,7 @@
                         <br>
                         <br>Don't press the X button, there is more to see...</p>
                 </div>
+
                 <div class="col-xs-4">
                     <h4>Drawing</h4>
                     <br>
@@ -191,22 +266,23 @@
             </div>
             <hr>
             <h3>Contact details</h3>
-            <div class="row">
-                <div id="#contact" class="col-xs-4">
-                    <h4>Contact Info</h4>
-                    <br>
-                    <img src="img/contact.png" alt="Contact" height: "150" width="150">
-                    <br>
-                    <br>
-                    <span>Name: Daniel Cagua Ennis</span>
-                    <br/>
-                    <span>Adress: Calle 144 #11-70</span>
-                    <br/>
-                    <span>City: Bogota,Colombia</span>
-                    <br/>
-                    <span>Phone Number: (+57)3134061172</span>
-                    <br/>
-                    <span>Email: d.cagua10@uniandes.edu.co
+            <div class="cd">
+                <div class="row">
+                    <div id="contact" class="col-xs-4">
+                        <h4>Contact Info</h4>
+                        <br>
+                        <img src="img/contact.png" alt="Contact" height: "150" width="150">
+                        <br>
+                        <br>
+                        <span>Name: Daniel Cagua Ennis</span>
+                        <br/>
+                        <span>Adress: Calle 144 #11-70</span>
+                        <br/>
+                        <span>City: Bogota,Colombia</span>
+                        <br/>
+                        <span>Phone Number: (+57)3134061172</span>
+                        <br/>
+                        <span>Email: d.cagua10@uniandes.edu.co
                 </div>
                 <div class="col-xs-4">
                     <h4>Twitter</h4>
@@ -232,13 +308,13 @@
                     <img src="img/linked.png" alt="LinkedIn" height="100" width="100">
                   </a>
                 </div>
-
-            </div>
-            <hr>
-            <!-- /container -->
+          </div>
         </div>
+            <hr>
+        </div><!-- /container -->
         <!-- JS -->
         <script src="js/script.js"></script>
+        <script src="js/slides.js"></script>
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!-- Jquery,Bootstrap, JS -->
