--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         
         <div class="container">
 
+            <style> .page-header{background-color: red};</style>
             <div class="page-header">
                 <img src="img/Profile.jpg" id="profile" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
                 <br>
