--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Daniel Cagua Ennis - Personal Website</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slides.css">
@@ -35,19 +36,19 @@
                         <li><a href="#contact">Contact</a></li>
                 </div>
         </nav>-->
-        
-        <div class="container">
-
-            <style> .page-header{background-color: red};</style>
-            <div class="page-header">
-                <img src="img/Profile.jpg" id="profile" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
+                <div class="intro">
+                <div class="page-header">
                 <br>
+                <img src="img/Profile.jpg" id="profile" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
                     <br>
                     <br> I am twenty one years old and live with my family (Dad and Mom), I also have a brother who lived in Argentina. I am interested in software development and data handling for security purposes.
-                </p>
+                </p><br>
             </div>
+          </div>
+
+        <div class="container">
             <h3>Education</h3>
             <div class="row">
                 <div class="col-xs-4">
@@ -162,81 +163,81 @@
                 <div class="col-xs-4">
                     <h4>Patches App</h4>
                     <br>
-                    <img src="img/game.png" alt="Patches" height="150" width="150">
+                    <img src="img/patches.png" alt="Patches" height="150" width="150">
                     <br>
                     <br>
-                    <p>STS</p>
+                    <p>I developed a tool to help people to afford depression problems by using social media chats to keep join with people and prevent major issues. It was based on IBM Watson technologies such as: AI assistants, Personality Insights and Tone Analyzer.</p>
                 </div>
                 <div class="col-xs-4">
-                    <h4>Project 2</h4>
+                    <h4>Hospital Alpes</h4>
                     <br>
-                    <img src="img/draw.png" alt="Draw" height="150" width="150">
+                    <img src="img/hospitalalpes.png" alt="Hospital Alpes" height="150" width="250">
                     <br>
                     <br>
-                    <p>STS</p>
+                    <p>Basic project about using diferent software architecture strategies to solve a problem in an Hospital that involves the optimization of the response times between devices and improve efficiency, the quality of the service and customer satisfaction. It was based on Java and HTML</p>
                 </div>
                 <div class="col-xs-4">
-                    <h4>Project 3</h4>
+                    <h4>Vuelandes</h4>
                     <br>
-                    <img src="img/soccer.png" alt="Soccer" height="150" width="150">
+                    <img src="img/plane.jpg" alt="Plane" height="150" width="250">
                     <br>
                     <br>
-                    <p>STS</p>
+                    <p>Implementation of database systems to model the fuctioning of an airport and understand how transactions work in that environment. It was based on Java and SQL.</p>
                 </div>
             </div>
             <div class="row">
             </div>
             <hr>
             <h3>Hobbies</h3>
-                <!--Slider-->
-                <div class="slideshow-container">
-                    <!-- Full-width images with number and caption text -->
-                    <div class="mySlides fade">
-                        <div class="numbertext">1 / 7</div>
-                        <img src="img/gallery/gallery1.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">2 / 7</div>
-                        <img src="img/gallery/gallery2.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">3 / 7</div>
-                        <img src="img/gallery/gallery3.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">4/ 7</div>
-                        <img src="img/gallery/gallery4.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">5 / 7</div>
-                        <img src="img/gallery/gallery5.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">6 / 7</div>
-                        <img src="img/gallery/gallery6.png" style="width:100%">
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">7 / 7</div>
-                        <img src="img/gallery/gallery7.png" style="width:100%">
-                    </div>
-                    <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <!--Slider-->
+            <div class="slideshow-container">
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 7</div>
+                    <img src="img/gallery/gallery1.png" style="width:100%">
                 </div>
-                <br>
-                <!-- The dots/circles -->
-                <div style="text-align:center">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
-                    <span class="dot" onclick="currentSlide(5)"></span>
-                    <span class="dot" onclick="currentSlide(6)"></span>
-                    <span class="dot" onclick="currentSlide(7)"></span>
-                </div><br>
-                <!--SlinderEnd-->
-
-                <div class="row">
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 7</div>
+                    <img src="img/gallery/gallery2.png" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 7</div>
+                    <img src="img/gallery/gallery3.png" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">4/ 7</div>
+                    <img src="img/gallery/gallery4.png" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">5 / 7</div>
+                    <img src="img/gallery/gallery5.png" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">6 / 7</div>
+                    <img src="img/gallery/gallery6.png" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">7 / 7</div>
+                    <img src="img/gallery/gallery7.png" style="width:100%">
+                </div>
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+                <span class="dot" onclick="currentSlide(5)"></span>
+                <span class="dot" onclick="currentSlide(6)"></span>
+                <span class="dot" onclick="currentSlide(7)"></span>
+            </div>
+            <br>
+            <!--SlinderEnd-->
+            <div class="row">
                 <div class="col-xs-4">
                     <h4>Videogames</h4>
                     <br>
@@ -247,7 +248,6 @@
                         <br>
                         <br>Don't press the X button, there is more to see...</p>
                 </div>
-
                 <div class="col-xs-4">
                     <h4>Drawing</h4>
                     <br>
@@ -266,8 +266,12 @@
                 </div>
             </div>
             <hr>
-            <h3>Contact details</h3>
-            <div class="cd">
+        </div>
+
+        <div class="cd">
+          <br>
+        <h3>Contact details</h3>
+        <br>
                 <div class="row">
                     <div id="contact" class="col-xs-4">
                         <h4>Contact Info</h4>
@@ -310,8 +314,6 @@
                   </a>
                 </div>
           </div>
-        </div>
-            <hr>
         </div><!-- /container -->
         <!-- JS -->
         <script src="js/script.js"></script>
