--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="body">
         <!-- Fixed navbar -->
-        <!--<nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Daniel Cagua Ennis</a>
@@ -31,11 +31,11 @@
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#education">Education</a></li>
                         <li><a href="#skills">Skills</a></li>
-                        <li><a href="#about">Projects</a></li>
+                        <li><a href="#projects">Projects</a></li>
                         <li><a href="#hobbies">Hobbies</a></li>
                         <li><a href="#contact">Contact</a></li>
                 </div>
-        </nav>-->
+        </nav>
                 <div class="intro">
                 <div class="page-header">
                 <br>
@@ -268,7 +268,7 @@
             <hr>
         </div>
 
-        <div class="cd">
+        <div class="cd" id="contact">
           <br>
         <h3>Contact details</h3>
         <br>
