--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
         <div class="container">
-            <h3>Education</h3>
+            <h3 id="education">Education</h3>
             <div class="row">
                 <div class="col-xs-4">
                     <h4>Colegio Anglo Americano</h4>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <hr>
-            <h3>Skills</h3>
+            <h3 id="skills">Skills</h3>
             <h4>Languages</h4>
             <div class="row">
                 <div class="col-xs-4">
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <hr>
-            <h3>Projects</h3>
+            <h3 id="projects">Projects</h3>
             <div class="row">
                 <div class="col-xs-4">
                     <h4>Patches App</h4>
@@ -188,7 +188,7 @@
             <div class="row">
             </div>
             <hr>
-            <h3>Hobbies</h3>
+            <h3 id="hobbies">Hobbies</h3>
             <!--Slider-->
             <div class="slideshow-container">
                 <!-- Full-width images with number and caption text -->
