--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
                         <li><a href="#contact">Contact</a></li>
                 </div>
         </nav>
-                <div class="intro">
-                <div class="page-header">
+        <div class="intro">
+            <div class="page-header">
                 <br>
-                <img src="img/Profile.jpg" id="profile" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
+                <img src="img/Profile.jpg" id="profileP" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
                     <br>
                     <br> I am twenty one years old and live with my family (Dad and Mom), I also have a brother who lived in Argentina. I am interested in software development and data handling for security purposes.
-                </p><br>
+                </p>
+                <br>
             </div>
-          </div>
-
+        </div>
         <div class="container">
             <h3 id="education">Education</h3>
             <div class="row">
@@ -267,27 +267,26 @@
             </div>
             <hr>
         </div>
-
         <div class="cd" id="contact">
-          <br>
-        <h3>Contact details</h3>
-        <br>
-                <div class="row">
-                    <div id="contact" class="col-xs-4">
-                        <h4>Contact Info</h4>
-                        <br>
-                        <img src="img/contact.png" alt="Contact" height: "150" width="150">
-                        <br>
-                        <br>
-                        <span>Name: Daniel Cagua Ennis</span>
-                        <br/>
-                        <span>Adress: Calle 144 #11-70</span>
-                        <br/>
-                        <span>City: Bogota,Colombia</span>
-                        <br/>
-                        <span>Phone Number: (+57)3134061172</span>
-                        <br/>
-                        <span>Email: d.cagua10@uniandes.edu.co
+            <br>
+            <h3>Contact details</h3>
+            <br>
+            <div class="row">
+                <div id="contact" class="col-xs-4">
+                    <h4>Contact Info</h4>
+                    <br>
+                    <img src="img/contact.png" alt="Contact" height: "150" width="150">
+                    <br>
+                    <br>
+                    <span>Name: Daniel Cagua Ennis</span>
+                    <br/>
+                    <span>Adress: Calle 144 #11-70</span>
+                    <br/>
+                    <span>City: Bogota,Colombia</span>
+                    <br/>
+                    <span>Phone Number: (+57)3134061172</span>
+                    <br/>
+                    <span>Email: d.cagua10@uniandes.edu.co
                 </div>
                 <div class="col-xs-4">
                     <h4>Twitter</h4>
@@ -315,14 +314,17 @@
                 </div>
           </div>
         </div><!-- /container -->
-        <!-- JS -->
+
+        <!-- Scripts -->
         <script src="js/script.js"></script>
         <script src="js/slides.js"></script>
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!-- Jquery,Bootstrap, JS -->
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
