--- a/index.html
+++ b/index.html
@@ -313,7 +313,24 @@
                   </a>
                 </div>
           </div>
-        </div><!-- /container -->
+        </div><!-- ListaContacto -->
+
+        <style>
+.footer {
+    position: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+</style>
+<br>
+<div class="footer">
+  <br>
+  <p>© Daniel Cagua Ennis - Web Development Course - #WebDev @Uniandes</p>
+</div>
 
         <!-- Scripts -->
         <script src="js/script.js"></script>
