--- a/index.html
+++ b/index.html
@@ -39,7 +39,23 @@
         <div class="intro">
             <div class="page-header">
                 <br>
-                <img src="img/Profile.jpg" id="profileP" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
+                <img src="img/Profile.jpg" id="pp" class="photo" alt="Daniel Cagua Ennis" height="256" width="256">
+                <style>
+                .wrapper {
+                    text-align: center;
+                }
+
+                .button {
+                    position: absolute;
+                    top: 50%;
+                    background-color: black;
+                    color: white;
+                }
+                </style>
+                <div class="wrapper">
+                    <br>
+                    <button type="button" class="button" onclick="change()">X</button>
+                </div><br>
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
                     <br>
@@ -338,7 +354,7 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="js/jquery.js"></script>
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
