--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
 
                 .button {
                     position: absolute;
-                    top: 50%;
                     background-color: black;
                     color: white;
                 }
                 </style>
                 <div class="wrapper">
                     <br>
-                    <button type="button" class="button" onclick="change()">X</button>
+                    <button type="button" class="button" onclick="change()">Change Image</button>
                 </div><br>
                 <h2>Hi, Im Daniel Cagua Ennis</h2>
                 <p class="lead">I am currently an undergraduate student pursuing a major in Systems and Computing Engineering at Los Andes University here at Bogotá, Colombia.
